--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -31,3 +31,8 @@ logging:
 file:
   upload:
     location: ${user.home}/instagram-clone/uploads/
+
+jwt:
+  secret-key: uVPg7h1ks6/LpQs8aZ5ofltoBaJzu3c+WvbXmM2lRVU= # 토큰 발급 시와 토큰 위조검사 시 사용할 서명
+  access-token-validity-time: 3600000  # 1시간 (ms)
+  refresh-token-validity-time: 604800000 # 7일 (ms)
